--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ section {
     justify-content: flex-end;
 }
 
-.my-10{
-    margin-top:10%;
-    margin-bottom: 10%;
-}
+.shadow-form {
+    background-color: rgba(0,0,0,0.03) !important;
+    box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.3) !important;
+  }
