List Tugas Design

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8173,6 +8173,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-body-color-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-mt {
+  --bs-text-opacity: 1;
+  color: #159895 !important;
+}
+
 .text-muted {
   --bs-text-opacity: 1;
   color: #6c757d !important;
